@@ -80,10 +80,6 @@ static GtkActionEntry menu_entries_help[] = {
     N_("Anjuta _Home Page"), NULL,
 	N_("Online documentation and resources"),
     G_CALLBACK (on_url_home_activate)},
-  { "ActionHelpLidn", GTK_STOCK_JUMP_TO,
-    N_("_Libraries API references"), NULL,
-	N_("Online reference library for GDK, GLib, GNOME etc.."),
-    G_CALLBACK (on_url_libs_activate)},
   { "ActionHelpBugReport", GTK_STOCK_JUMP_TO,
     N_("Report _Bugs"), NULL,
 	N_("Submit a bug report for Anjuta"),
